fixed padding whitespace for main section

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -348,7 +348,7 @@
   padding-top: 30px;
   // adjust padding for mobile to balance whitespace - CJB
   padding-right: 10px;
-  padding-left: 1opx;
+  padding-left: 10px;
 }
 
 .search-link {
